--- a/www/templates/playlist.html
+++ b/www/templates/playlist.html
@@ -9,20 +9,25 @@
                 {{ getDuration(state.duration) | date: 'mm:ss' }}
                 <i class="icon ion-stop" ng-click="stopPlaying()"></i>
             </div>
-
+            <div class="range range-assertive">
+                <i class="icon ion-volume-low"></i>
+                <input type="range" name="volume" ng-model="audio.gainNode.gain.value" min="0" max="1" step="0.05" />
+                <i class="icon ion-volume-high"></i>
+            </div>
 
 
 
             <div class="item item-divider">
-                {{sujet}}
+                {{sujet}} playlist number : {{param}}
             </div>
+            
+            <span ng-repeat="song in songs">
+                <li class="item" ng-value="song" ng-click="play('{{song.link}}')">
+                    {{song.name+' ('+song.band+')'}}
+                </li>
+            </span>
 
         </div>
-        <h1>Playlist</h1>
-        {{param}}
-        <br />
-
-
 
     </ion-content>
 </ion-view>
