--- a/www/templates/playlist.html
+++ b/www/templates/playlist.html
@@ -1,33 +1,17 @@
-<ion-view view-title="Playlist">
+<ion-view view-title="{{sujet}}">
     <ion-content>
         <div class="list">
-
-            <!--<div class="range range-dark">
-                    <i class="icon" ng-click="playPause()" ng-class="{'ion-play': status != enums.state.playing, 'ion-pause': status === enums.state.playing}"></i>
-                    {{(getDuration(data.currentTime) | date: 'HH:mm:ss') || ''}}  
-                
-                    <input type="range" min="0" ng-model="data.currentTime" ng-change="seeked();" step="0.01" max="{{data.duration}}" value="{{data.currentTime}}">
-                
-
-                    {{ (getDuration(data.duration) | date: 'HH:mm:ss')|| '' }}
-                    <i class="icon ion-stop" ng-click="stop()"></i>
-                </div>
-                <div class="range range-assertive">
-                    <i class="icon ion-volume-low"></i>
-                    <input type="range" name="volume" ng-model="volume" min="0" max="1" step="0.05" ng-change="setVolume(volume)" />
-                    <i class="icon ion-volume-high"></i>
-                </div>-->
-            
-            
-            
-
-
             <div class="item item-divider">
-                {{sujet}} playlist number : {{param}}
+                {{playlistName | capitalize}}
             </div>
-            
-            <span ng-repeat="song in songs">
-                
+
+            <label class="item item-input">
+                <i class="icon ion-search placeholder-icon"></i>
+                <input type="search" placeholder="Search" ng-model="searchText">
+            </label>
+
+            <span ng-repeat="song in songs | filter : searchText">
+
                 <label class="item item-radio" ng-value="song" ng-click="play('{{song.tracks[0].url}}')">
                     <input type="radio" name="group">
                     <div class="item-content">
@@ -35,17 +19,11 @@
                     </div>
                     <i class="radio-icon ion-checkmark"></i>
                 </label>
-                
 
-                
-
-                <!--<li class="item" ng-value="song" ng-click="play('{{song.tracks[0].url}}')">
-                    {{song.name+' ('+song.band+')'}}
-                </li>-->
             </span>
 
         </div>
 
     </ion-content>
-    
+
 </ion-view>
